@@ -2,11 +2,13 @@
 Version: 18.0.4
 Date: 2020-04-02
   Features:
+    - revamped underground logic to support deconstruction and all known usage cases.
   Changes:
   Bugfixes:
     - react to script_revive_event - as construction drones now use this to build things.
     - handle a middle underground in a row of 3 being removed and the outer 2 undergrounds connecting up automatically: > (<) <
     - support deconstruction
+    - handle a pair of underground being inserted by bot in beteen an exisitng pair of same type of undergrounds
   Info:
 ---------------------------------------------------------------------------------------------------
 Version: 18.0.3
